--- a/framework/app/views/instances/show.html.erb
+++ b/framework/app/views/instances/show.html.erb
@@ -15,7 +15,7 @@
       Owner
     </dt>
     <dd>
-      <%= link_to @instance[:owner], @instance[:owner] %>
+      <%= link_to @instance[:owner_id], account_url( @instance[:owner_id] ) %>
     </dd>
   </di>
   <di>
