--- a/framework/app/views/instances/new.html.erb
+++ b/framework/app/views/instances/new.html.erb
@@ -1,8 +1,8 @@
 <h1>New Instance</h1>
 
-<h2><%= @instance.image.id %></h2>
+<h2><%= @instance[:image_id] %></h2>
 
-<% form_for @instance do |f| %>
-  <%= f.hidden_field :image %>
+<% form_tag instances_url do %>
+  <%= hidden_field_tag :image_id, @instance[:image_id] %>
   <%= submit_tag 'create' %>
 <% end %>
