Start working on storage volumes and snapshots.
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@961988 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/app/views/images/index.html.erb
+++ b/framework/app/views/images/index.html.erb
@@ -19,7 +19,7 @@
         <%= link_to image[:id], image_url( image[:id] ) %>
       </td>
       <td>
-        <%= link_to image[:owner_id], account_url( image[:owner_id] ) %>
+        <%= link_to image[:owner_id], images_url( :owner=>image[:owner_id] ) %>
       </td>
       <td>
         <%= image[:description] %>
