Add support for VM flavors
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@961993 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/app/views/instances/show.html.erb
+++ b/framework/app/views/instances/show.html.erb
@@ -20,6 +20,14 @@
   </di>
   <di>
     <dt>
+      Flavor
+    </dt>
+    <dd>
+      <%= @instance[:flavor] %>
+    </dd>
+  </di>
+  <di>
+    <dt>
       State
     </dt>
     <dd>
