--- a/framework/public/stylesheets/application.css
+++ b/framework/public/stylesheets/application.css
@@ -36,6 +36,9 @@ body {
     #bd dl di dd {
       padding-left: 1em;
       background-color: #eeeeee; }
+#bd ul li {
+  list-style-type: square;
+  margin-left: 1em; }
 
 table {
   width: 100%; }
