--- a/framework/public/stylesheets/sass/application.sass
+++ b/framework/public/stylesheets/sass/application.sass
@@ -43,6 +43,10 @@ body
       dd
         :padding-left 1em
         :background-color = !td_bg
+  ul
+    li
+      :list-style-type square
+      :margin-left 1em
 
 
 table
