Start work on flavor selection for instance spinup.
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@961994 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/app/views/instances/new.html.erb
+++ b/framework/app/views/instances/new.html.erb
@@ -4,5 +4,8 @@
 
 <% form_tag instances_url do %>
   <%= hidden_field_tag :image_id, @instance[:image_id] %>
+  <select>
+    <%= options_for_select @flavors, nil %>
+  </select>
   <%= submit_tag 'create' %>
 <% end %>
