Allow spinning up of images against appropriate VM flavors.
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@961996 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/app/views/instances/show.html.erb
+++ b/framework/app/views/instances/show.html.erb
@@ -23,7 +23,7 @@
       Flavor
     </dt>
     <dd>
-      <%= @instance[:flavor] %>
+      <%= link_to @instance[:flavor_id], flavor_url( @instance[:flavor_id] ) %>
     </dd>
   </di>
   <di>
