--- a/framework/public/stylesheets/sass/application.sass
+++ b/framework/public/stylesheets/sass/application.sass
@@ -61,3 +61,21 @@ table
     :background-color = !td_bg
 
 
+.radio-group
+  :font-size 90%
+  :margin-bottom 1em
+  :background-color = !th_bg
+  label
+    :font-weight bold
+
+.radio-group-details
+  :font-weight normal
+  :display block
+  :padding-left 1em
+  :background-color = !td_bg
+  :padding 1ex
+
+input[type='radio']
+  :margin-top 1ex
+  :margin-left 1ex
+  :margin-bottom 1ex
