--- a/framework/app/views/instances/new.html.erb
+++ b/framework/app/views/instances/new.html.erb
@@ -1,11 +1,20 @@
 <h1>New Instance</h1>
 
-<h2><%= @instance[:image_id] %></h2>
+<h2><%= @image[:id] %></h2>
+<h3><%= @image[:description] %></h3>
 
 <% form_tag instances_url do %>
   <%= hidden_field_tag :image_id, @instance[:image_id] %>
-  <select>
-    <%= options_for_select @flavors, nil %>
-  </select>
+  <% for flavor in @flavors %>
+    <div class="radio-group">
+      <label for="flavor_id_<%=flavor[:id]%>">
+        <%= radio_button_tag 'flavor_id', flavor[:id] %>
+        <%= flavor[:id] %><br/>
+        <span class="radio-group-details">
+          <%= flavor[:architecture] %>, <%= flavor[:memory] %> GB, <%= flavor[:storage] %> GB
+        </span>
+      </label>
+    </div>
+  <% end %>
   <%= submit_tag 'create' %>
 <% end %>
