Include XML tag for nil attributes. Remove _at suffix for dates. Move links to tag content, instead of href attribute.
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@961997 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/app/views/storage_snapshots/index.html.erb
+++ b/framework/app/views/storage_snapshots/index.html.erb
@@ -6,11 +6,29 @@
     <th>
       ID
     </th>
+    <th>
+      Volume
+    </th>
+    <th>
+      Created
+    </th>
+    <th>
+      State
+    </th>
   </tr>
   <% for snapshot in @snapshots %>
     <tr>
       <td>
         <%= link_to snapshot[:id], storage_snapshot_url( snapshot[:id] ) %>
+      </td>
+      <td>
+        <%= link_to snapshot[:volume_id], storage_volume_url( snapshot[:volume_id] ) %>
+      </td>
+      <td>
+        <%= snapshot[:created] %>
+      </td>
+      <td>
+        <%= snapshot[:state] %>
       </td>
     </tr>
   <% end %>
