--- a/framework/app/views/storage_snapshots/show.html.erb
+++ b/framework/app/views/storage_snapshots/show.html.erb
@@ -4,18 +4,26 @@
 <dl>
   <di>
     <dt>
-      State
-    </dt>
-    <dd>
-      <%= @snapshot[:state] %>
-    </dd>
-  </di>
-  <di>
-    <dt>
       Volume
     </dt>
     <dd>
       <%= @snapshot[:volume_id] %>
+    </dd>
+  </di>
+  <di>
+    <dt>
+      Created
+    </dt>
+    <dd>
+      <%= @snapshot[:created] %>
+    </dd>
+  </di>
+  <di>
+    <dt>
+      State
+    </dt>
+    <dd>
+      <%= @snapshot[:state] %>
     </dd>
   </di>
 </dl>
