--- a/framework/app/views/storage_volumes/index.html.erb
+++ b/framework/app/views/storage_volumes/index.html.erb
@@ -22,7 +22,7 @@
         <%= link_to volume[:id], storage_volume_url( volume[:id] ) %>
       </td>
       <td>
-        <%= volume[:created_at] %>
+        <%= volume[:created] %>
       </td>
       <td>
         <%= volume[:capacity] %> GB
