Display wired-up driver name on root HTML page.
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@961998 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/app/views/root/index.html.erb
+++ b/framework/app/views/root/index.html.erb
@@ -1,5 +1,6 @@
 
-<h1>&#x3B4;-cloud-framework</h1>
+<!-- <h1>&#x3B4;-cloud-framework</h1> -->
+<h1>DeltaCloud: <%= DRIVER.to_s.titlecase %></h1>
 
 <ul>
   <li><%= link_to 'Flavors',     flavors_url %></li>
