More mock driver capabilities and data.
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962008 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/app/views/images/index.html.erb
+++ b/framework/app/views/images/index.html.erb
@@ -10,6 +10,9 @@
       Owner
     </th>
     <th>
+      Architecture
+    </th>
+    <th>
       Description
     </th>
   </tr>
@@ -20,6 +23,9 @@
       </td>
       <td>
         <%= link_to image[:owner_id], images_url( :owner=>image[:owner_id] ) %>
+      </td>
+      <td>
+        <%= image[:architecture] %>
       </td>
       <td>
         <%= image[:description] %>
