Use app/models/**
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962040 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/app/views/flavors/index.html.erb
+++ b/framework/app/views/flavors/index.html.erb
@@ -19,16 +19,16 @@
   <% for flavor in @flavors %>
     <tr>
       <td>
-        <%= link_to flavor[:id], flavor_url( flavor[:id] ) %>
+        <%= link_to flavor.resource_id, flavor_url( flavor.resource_id ) %>
       </td>
       <td>
-        <%= flavor[:architecture] %>
+        <%= flavor.architecture %>
       </td>
       <td>
-        <%= flavor[:memory] %> GB
+        <%= flavor.memory %> GB
       </td>
       <td>
-        <%= flavor[:storage] %> GB
+        <%= flavor.storage %> GB
       </td>
     </tr>
   <% end %>
