--- a/framework/app/views/instances/show.html.erb
+++ b/framework/app/views/instances/show.html.erb
@@ -1,5 +1,5 @@
 
-<h1><%= @instance[:id] %></h1>
+<h1><%= @instance.resource_id %></h1>
 
 <dl>
   <di>
@@ -7,7 +7,7 @@
       Image
     </dt>
     <dd>
-      <%= link_to @instance[:image_id], image_url( @instance[:image_id] ) %>
+      <%= link_to @instance.image_id, image_url( @instance.image_id ) %>
     </dd>
   </di>
   <di>
@@ -15,7 +15,7 @@
       Owner
     </dt>
     <dd>
-      <%= @instance[:owner_id] %>
+      <%= @instance.owner_id %>
     </dd>
   </di>
   <di>
@@ -23,7 +23,7 @@
       Flavor
     </dt>
     <dd>
-      <%= link_to @instance[:flavor_id], flavor_url( @instance[:flavor_id] ) %>
+      <%= link_to @instance.flavor_id, flavor_url( @instance.flavor_id ) %>
     </dd>
   </di>
   <di>
@@ -31,30 +31,34 @@
       State
     </dt>
     <dd>
-      <%= @instance[:state] %>
+      <%= @instance.state %>
     </dd>
   </di>
   <di>
     <dt>
-      Public Address
+      Public Addresses
     </dt>
     <dd>
-      <%= @instance[:public_address] %>
+      <% for address in  @instance.public_addresses %>
+        <div><%= address %></div>
+      <% end %>
     </dd>
   </di>
   <di>
     <dt>
-      Private Address
+      Private Addresses
     </dt>
     <dd>
-      <%= @instance[:private_address] %>
+      <% for address in  @instance.private_addresses %>
+        <div><%= address %></div>
+      <% end %>
     </dd>
   </di>
 </dl>
 
 <div>
-  <%# @instance.class.actions.each do |action| %>
-    <%#= link_to action, polymorphic_url( @instance, :action=>action ), :method=>:post %>
-  <%# end %>
-  <%= link_to 'delete', instance_url( @instance[:id] ), :method=>:delete %>
+  <% @instance.actions.each do |action| %>
+    <%= link_to action, send( "#{action}_instance_url", @instance.resource_id ), :method=>:post %>
+  <% end %>
+  <%= link_to 'delete', instance_url( @instance.resource_id ), :method=>:delete %>
 </div>
