Add driver indicator to HTML footer. Link better to owner_id.
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962042 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/app/views/images/show.html.erb
+++ b/framework/app/views/images/show.html.erb
@@ -8,7 +8,7 @@
       Owner
     </dt>
     <dd>
-      <%= link_to @image.owner_id, images_url( :owner=>@image.owner_id ) %>
+      <%= link_to @image.owner_id, images_url( :owner_id=>@image.owner_id ) %>
     </dd>
   </di>
   <di>
