--- a/framework/app/views/images/index.html.erb
+++ b/framework/app/views/images/index.html.erb
@@ -22,7 +22,7 @@
         <%= link_to image.resource_id, image_url( image.resource_id ) %>
       </td>
       <td>
-        <%= link_to image.owner_id, images_url( :owner=>image.owner_id ) %>
+        <%= link_to image.owner_id, images_url( :owner_id=>image.owner_id ) %>
       </td>
       <td>
         <%= image.architecture %>
