Fully change resource_id to id
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962043 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/app/views/flavors/index.html.erb
+++ b/framework/app/views/flavors/index.html.erb
@@ -19,7 +19,7 @@
   <% for flavor in @flavors %>
     <tr>
       <td>
-        <%= link_to flavor.resource_id, flavor_url( flavor.resource_id ) %>
+        <%= link_to flavor.id, flavor_url( flavor.id ) %>
       </td>
       <td>
         <%= flavor.architecture %>
