--- a/framework/app/views/images/index.html.erb
+++ b/framework/app/views/images/index.html.erb
@@ -19,7 +19,7 @@
   <% for image in @images %>
     <tr>
       <td>
-        <%= link_to image.resource_id, image_url( image.resource_id ) %>
+        <%= link_to image.id, image_url( image.id ) %>
       </td>
       <td>
         <%= link_to image.owner_id, images_url( :owner_id=>image.owner_id ) %>
