--- a/framework/app/views/layouts/application.html.erb
+++ b/framework/app/views/layouts/application.html.erb
@@ -7,10 +7,11 @@
     <%= stylesheet_link_tag '/yui/reset-fonts-grids/reset-fonts-grids.css' %>
     <%= stylesheet_link_tag 'application.css' %>
   </head>
- 
+
   <body>
     <div id="doc" class="yui-t2">
       <div id="hd">
+      <%= bread_crumb -%>
       </div>
       <div id="bd">
         <div id="yui-main">
@@ -28,4 +29,3 @@
     </div>
   </body>
 </html>
-
