Add models and conversion for storage-volumes. Adjust driver SPI to be consistent with "storage-volumes" instead of simply "volumes"
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962054 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/app/views/storage_volumes/index.html.erb
+++ b/framework/app/views/storage_volumes/index.html.erb
@@ -19,16 +19,16 @@
   <% for volume in @volumes %>
     <tr>
       <td>
-        <%= link_to volume[:id], storage_volume_url( volume[:id] ) %>
+        <%= link_to volume.id, storage_volume_url( volume.id ) %>
       </td>
       <td>
-        <%= volume[:created] %>
+        <%= volume.created %>
       </td>
       <td>
-        <%= volume[:capacity] %> GB
+        <%= volume.capacity %> GB
       </td>
       <td>
-        <%= volume[:state] %>
+        <%= volume.state %>
       </td>
     </tr>
   <% end %>
