Adding model for storage snapshots.
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962063 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/app/views/storage_snapshots/index.html.erb
+++ b/framework/app/views/storage_snapshots/index.html.erb
@@ -19,16 +19,16 @@
   <% for snapshot in @snapshots %>
     <tr>
       <td>
-        <%= link_to snapshot[:id], storage_snapshot_url( snapshot[:id] ) %>
+        <%= link_to snapshot.id, storage_snapshot_url( snapshot.id ) %>
       </td>
       <td>
-        <%= link_to snapshot[:volume_id], storage_volume_url( snapshot[:volume_id] ) %>
+        <%= link_to snapshot.storage_volume_id, storage_volume_url( snapshot.storage_volume_id ) %>
       </td>
       <td>
-        <%= snapshot[:created] %>
+        <%= snapshot.created %>
       </td>
       <td>
-        <%= snapshot[:state] %>
+        <%= snapshot.state %>
       </td>
     </tr>
   <% end %>
