--- a/framework/app/views/instances/show.html.erb
+++ b/framework/app/views/instances/show.html.erb
@@ -20,6 +20,14 @@
   </di>
   <di>
     <dt>
+      Name
+    </dt>
+    <dd>
+      <%= @instance.name %>
+    </dd>
+  </di>
+  <di>
+    <dt>
       Flavor
     </dt>
     <dd>
