Add a name to template
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962075 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/app/views/images/index.html.erb
+++ b/framework/app/views/images/index.html.erb
@@ -7,6 +7,9 @@
       ID
     </th>
     <th>
+      Name
+    </th>
+    <th>
       Owner
     </th>
     <th>
@@ -20,6 +23,9 @@
     <tr>
       <td>
         <%= link_to image.id, image_url( image.id ) %>
+      </td>
+      <td>
+        <%= image.name %>
       </td>
       <td>
         <%= link_to image.owner_id, images_url( :owner_id=>image.owner_id ) %>
