Require 'realm' because the case fails otherwise. Add some extra attributes in the HTML representation.
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962079 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/app/views/instances/index.html.erb
+++ b/framework/app/views/instances/index.html.erb
@@ -18,6 +18,9 @@
       Flavor
     </th>
     <th>
+      Realm
+    </th>
+    <th>
       State
     </th>
     <th>
@@ -39,7 +42,18 @@
         <%= link_to instance.image_id, image_url( instance.image_id ) %>
       </td>
       <td>
-        <%= link_to instance.flavor_id, flavor_url( instance.flavor_id ) %>
+        <% if ( instance.flavor_id ) %>
+          <%= link_to instance.flavor_id, flavor_url( instance.flavor_id ) %>
+        <% else %>
+          default
+        <% end %>
+      </td>
+      <td>
+        <% if ( instance.realm_id ) %>
+          <%= link_to instance.realm_id, realm_url( instance.realm_id ) %>
+        <% else %>
+          default
+        <% end %>
       </td>
       <td>
         <%= instance.state %>
