--- a/framework/app/views/realms/index.html.erb
+++ b/framework/app/views/realms/index.html.erb
@@ -10,6 +10,9 @@
       Name
     </th>
     <th>
+      State
+    </th>
+    <th>
       Limit
     </th>
   </tr>
@@ -20,6 +23,9 @@
       </td>
       <td>
         <%= realm.name %>
+      </td>
+      <td>
+        <%= realm.state %>
       </td>
       <td>
         <%= realm.limit %>
