--- a/framework/app/views/realms/show.html.erb
+++ b/framework/app/views/realms/show.html.erb
@@ -11,6 +11,14 @@
   </di>
   <di>
     <dt>
+      State
+    </dt>
+    <dd>
+      <%= @realm.state %>
+    </dd>
+  </di>
+  <di>
+    <dt>
       Limit
     </dt>
     <dd>
