Add instance-states as a singleton resource (plus route it) Add API entrypoint.
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962087 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/app/views/instance_states/show.html.erb
+++ b/framework/app/views/instance_states/show.html.erb
@@ -34,7 +34,11 @@
       <% transitions.each do |destination, action| %>
         <tr>
           <td>
-            <%= action %>
+            <% if ( action == :_auto_ ) %>
+              <em>auto</em>
+            <% else %>
+              <%= action %>
+            <% end %>
           </td>
           <td>
             <%= destination %>
