--- a/framework/app/views/api/show.xml.haml
+++ b/framework/app/views/api/show.xml.haml
@@ -1,3 +1,3 @@
-%api{ :version=>@version }
+%api{ :version=>@version, :driver=>DRIVER }
   - for entry_point in @entry_points
     %link{ :rel=>entry_point[0], :href=>entry_point[1] }
