Correct DeltaCloud to Deltacloud spelling everywhere. Add literate state-machine definition to BaseDriver. Adjust all 4 drivers to use the new FSM definition. Adjust all RESTful representations to extract from FSM config. Adjust pathing for rhevm_config.yaml. Adjust extention of rhevm_config.yaml to .yml to conform to other config/ items.
git-svn-id: https://svn.apache.org/repos/asf/incubator/deltacloud/trunk@962155 13f79535-47bb-0310-9956-ffa450edef68

--- a/server/app/views/instance_states/show.html.erb
+++ b/server/app/views/instance_states/show.html.erb
@@ -13,15 +13,13 @@
       Destination
     </th>
   </tr>
-  <% @states.each do |state| %>
-    <% origin      = state.first %>
-    <% transitions = state.last %>
+  <% @machine.states.each do |state| %>
     <tr>
-      <td rowspan="<%= transitions.empty? ? 2 : transitions.size + 1 %>" class="origin">
-        <%= origin %>
+      <td rowspan="<%= state.transitions.empty? ? 2 : state.transitions.size + 1 %>" class="origin">
+        <%= state %>
       </td>
     </tr>
-    <% if ( transitions.empty? ) %>
+    <% if ( state.transitions.empty? ) %>
       <tr> 
         <td>
           --
@@ -31,17 +29,17 @@
         </td>
       </tr> 
     <% else %>
-      <% transitions.each do |destination, action| %>
+      <% state.transitions.each do |transition| %>
         <tr>
           <td>
-            <% if ( action == :_auto_ ) %>
+            <% if ( transition.automatically? ) %>
               <em>auto</em>
             <% else %>
-              <%= action %>
+              <%= transition.action %>
             <% end %>
           </td>
           <td>
-            <%= destination %>
+            <%= transition.destination %>
           </td>
         </tr>
       <% end %>
