--- a/server/app/views/layouts/application.html.erb
+++ b/server/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 
 <html>
   <head>
-    <title>DeltaCloud Framework</title>
+    <title>Deltacloud Foundation</title>
     <%= stylesheet_link_tag '/yui/reset-fonts-grids/reset-fonts-grids.css' %>
     <%= stylesheet_link_tag 'application.css' %>
   </head>
@@ -22,7 +22,7 @@
       </div>
       <div id="ft">
         <div style="float: right; text-align: right; font-size: 90%;">
-          DeltaCloud Driver: <%= DRIVER %><br/>
+          Driver <%= DRIVER %><br/>
           Copyright 2009 <%= link_to 'Red Hat', 'http://redhat.com' %> <br />
         </div>
       </div>
