--- a/server/app/views/root/index.html.erb
+++ b/server/app/views/root/index.html.erb
@@ -1,5 +1,5 @@
 
-<!-- <h1>&#x3B4;-cloud-framework</h1> -->
-<h1>DeltaCloud: <%= DRIVER.to_s.titlecase %></h1>
+<!-- <h1>&#x3B4;-cloud-foundation</h1> -->
+<h1>Deltacloud: <%= DRIVER.to_s.titlecase %></h1>
 
 <%= link_to 'API', api_url %>
